# ConvexHullHaskellApp

./: ConvexHullHaskellApp.cabal  LICENSE  README.md  Temp.hs  extrasources.txt  stack.yaml
src/: Algorithms.hs  Charting.hs  Interactive.hs  Main.hs
test/: AlgorithmSpec.hs  Spec.hs
