name:                ConvexHullHaskellApp
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/J8cob1/ConvexHullHaskellApp
license:             BSD3
license-file:        LICENSE
author:              Jacob Crisan
maintainer:          jacob.crisan@gmail.com
copyright:           2020 Jacob Crisan
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable ConvexHullHaskellApp
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Algorithms
  default-language:    Haskell2010
  build-depends:       base >= 4.8 && < 5, QuickCheck, cmath
